--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
-
+{
     "name": "n8n",
     "description": "deploy n8n to heroku without any hassle",
     "keywords": [
@@ -7,8 +7,8 @@
       "automation"
     ],
     "website": "https://n8n.io",
-    "repository": "https://github.com/n8n-io/n8n-heroku",
-    "logo": "https://raw.githubusercontent.com/n8n-io/n8n-heroku/main/n8n_logo.png",
+    "repository": "https://github.com/lgrgdg/n8n-heroku",
+    "logo": "https://raw.githubusercontent.com/lgrgdg/n8n-heroku/main/n8n_logo.png",
     "success_url": "/",
     "stack": "container",
     "env": {
